--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "core-js": "^2.6.5",
     "vant": "^2.0.5",
     "vue": "^2.6.10",
-    "vue-router": "^3.0.3"
+    "vue-router": "^3.0.3",
+    "vue-template": "^1.0.3"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.12.0",
